fixed the spacing for back button

--- a/skietbaan_fe/src/components/ForgotPassword.css
+++ b/skietbaan_fe/src/components/ForgotPassword.css
@@ -20,6 +20,13 @@
   font-weight: bold;
 }
 
+.back-btn-forgot-password{
+    margin-top: -40px;
+    height: 34px;
+    position: absolute;
+    left: 10px;
+}
+
 .forgot-password-button {
   position: fixed;
   bottom: 57px;
